fixed text alignment, buttons

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,9 @@ html, body {
   
   .control-group {
     padding : 16px;
+    padding-right: 0px;
     display: flex;
+    width : fit-content;
     flex-direction: column;
     color: rgb(0, 0, 0);;
   }
@@ -187,11 +189,12 @@ html, body {
     padding: 2px;
     align-items: center;
     justify-content: center;
+    margin: 2px;
     color: #ffffff;
     cursor: pointer;
     font-family: monospace;
     font-size: 10px;
-    width: 10%;
+    width: auto;
     height: 26px;
     text-align: center;
   }
